1999-05-25    <mgd@HELEN>

	* Makefile.am (OBJS, swarm.dll): Don't take apart convenience
	libraries, just do wildcards on the subdirectories.  Add libobjc
	objects.

1999-05-25  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (swarm.dll): Handle constructors.

1999-05-25  Alex Lancaster  <alex@santafe.edu>

	* Makefile.am (install-data-local): To avoid returning a non-true
	value to `make', re-write with explicit `if-then' test.

1999-05-25  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (swarm.dll): New rule.
	(install-data-local): If SWARMDLL is set, install libswarm.a and
	run ranlib on installed version.
	(EXTRA_PROGRAMS): Add swarm.dll.

1999-05-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (CURRENT, VERSION, AGE, lib_LTLIBRARIES,
	libswarm_la_SOURCES, LIBS, empty.m, libswarm_la_LDFLAGS): New
	target for libswarm.  Include Makefile.common.
	(SWARMMODULES): New variable (just the libraries, in order
	of dependence).
	(SUBDIRS): Move misc to front.

1999-03-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.rules ($(TYPEINFO):): Note that $(SOURCES) is a dependency,
	but comment it out.

1998-12-21  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.rules (MAKEH2X): New variable.
	($(TYPEINFO)): Depend on $(MAKEH2X) and invoke make-h2x with this
	variable.

1998-12-11  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.rules ($(TYPEINFO)): Pass OBJC and OBJCFLAGS instead of
	CC and CFLAGS.

1998-11-19  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.rules (TYPEINFO): Define as $(MODULE).xm types.h classes.h.
	(CLEANFILES): Define as $(TYPEINFO).

1998-11-12  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile.rules: Make $(MODULE).xm a target with {types,classes}.h.

1998-08-26  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (headers): Use $(MAKE), not make.

1998-08-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (SUBDIRS): Add tclobjc.
